# athalar

./: .cSpell.json  .gitignore  .wakatime-project  Cargo.toml  LICENSE.txt  README.md  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  workspace.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-create.sh
.github/actions/setup/: action.yaml
.github/workflows/: js-ci.yaml
.husky/: pre-push
apps/athalar/: Cargo.toml  project.json
apps/athalar-js/: CHANGELOG.md  Cargo.toml  README.md  main.ts  package.json  project.json
apps/athalar-js/__test__/: index.spec.ts
apps/athalar-js/benchmark/: bench.ts
apps/athalar-js/js-src/: index.ts
apps/athalar-js/npm/android-arm-eabi/: README.md  package.json
apps/athalar-js/npm/android-arm64/: README.md  package.json
apps/athalar-js/npm/darwin-arm64/: README.md  package.json
apps/athalar-js/npm/darwin-x64/: README.md  package.json
apps/athalar-js/npm/freebsd-x64/: README.md  package.json
apps/athalar-js/npm/linux-arm-gnueabihf/: README.md  package.json
apps/athalar-js/npm/linux-arm64-gnu/: README.md  package.json
apps/athalar-js/npm/linux-arm64-musl/: README.md  package.json
apps/athalar-js/npm/linux-x64-gnu/: README.md  package.json
apps/athalar-js/npm/linux-x64-musl/: README.md  package.json
apps/athalar-js/npm/win32-arm64-msvc/: README.md  package.json
apps/athalar-js/npm/win32-ia32-msvc/: README.md  package.json
apps/athalar-js/npm/win32-x64-msvc/: README.md  package.json
apps/athalar-js/src/: atoms.rs  lib.rs
apps/athalar-js/src/bindings/: class_validator.rs  mod.rs
apps/athalar-py/: Cargo.toml  README.md  project.json  pyproject.toml
apps/athalar-py/athalar_py/: cli.py
apps/athalar-py/src/: lib.rs
apps/athalar/src/: main.rs
apps/cli/: Cargo.toml  project.json
apps/cli/src/: app.rs  lib.rs  main.rs
apps/cli/src/templates/: py.tera
apps/config/: project.json  tsconfig.app.json
apps/config/src/generators/: backend.ath.yaml
apps/config/src/partials/: api.ath.yaml  magic.ath.yaml  mail.ath.yaml
deployment/: should-publish-to-npm.mjs
libs/athalar-core/: Cargo.toml  project.json
libs/athalar-core/src/: atom.rs  config.rs  config_atom.rs  constants.rs  core.rs  generator.rs  lib.rs  partial.rs  report.rs  utils.rs
libs/athalar-core/src/binding/: class_validator.rs  mod.rs  profile.rs  pydantic.rs  typescript.rs
libs/athalar-core/src/reporting/: data.rs
libs/core/: README.md  project.json
libs/core/src/: config.rs  generator.rs  lib.rs  partial.rs
libs/core/src/reporting/: mod.rs
libs/python/: Cargo.toml
libs/python/src/: atoms.rs  lib.rs  python.tera
libs/python/src/bindings/: pydantic.rs
libs/typescript/: Cargo.toml  project.json
libs/typescript/src/: constants.rs  lib.rs  typescript.tera
tests/fixtures/config/basic/src/generators/: backend.ath.yaml
tests/fixtures/config/basic/src/partials/: api.ath.yaml
