[package]
name = "athalar_core"
description = "The athalar core used to create langauge bindings"
repository = "https://github.com/IgnisDa/athalar"
readme = "README.md"
version = "0.0.1"
edition = "2021"
license-file = "../../LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
educe = { version = "0.4.19", features = ["Default"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.9.2"
toml = "0.5.9"
validator = { version = "0.16.0", features = ["derive"] }
