[package]
name = "athalar_core"
description = "The athalar core used to create language bindings"
repository = "https://github.com/IgnisDa/athalar"
readme = "README.md"
version = "0.0.1"
edition = "2021"
license-file = "../../LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = { workspace = true }
glob = "0.3.0"
hashbag = "0.1.9"
relative-path = "1.7.2"
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.9.4"
strum_macros = "0.24.3"
toml = "0.5.9"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
